--- a/lib/l10n/app_de.arb
+++ b/lib/l10n/app_de.arb
@@ -46,6 +46,7 @@
   "appLock": "App-Sperre",
   "pushNotifications": "Push-Benachrichtigungen",
   "clearHistory": "Verlauf löschen",
+  "clearAllData": "Alle Daten löschen",
   "exportData": "Daten exportieren",
   "skip": "Überspringen",
   "next": "Weiter",
@@ -220,6 +221,10 @@
   "languageChangedTo": "Sprache auf {language} geändert",
   "clearHistoryQuestion": "Verlauf löschen?",
   "clearHistoryWarning": "Dies löscht alle deine Daten. Diese Aktion kann nicht rückgängig gemacht werden.",
+  "clearAllDataQuestion": "Alle Daten löschen?",
+  "clearAllDataWarning": "Dies löscht dauerhaft alle deine Daten einschließlich Chat-Verlauf, Tagebucheinträge, Bewertungen, Einstellungen und heruntergeladene KI-Modelle. Diese Aktion kann nicht rückgängig gemacht werden.",
+  "dataCleared": "Alle Daten erfolgreich gelöscht",
+  "clearingData": "Daten werden gelöscht...",
   "clear": "Löschen",
   "historyCleared": "Verlauf gelöscht",
   "aboutAnchor": "Über Anchor",
