--- a/lib/l10n/app_es.arb
+++ b/lib/l10n/app_es.arb
@@ -46,6 +46,7 @@
   "appLock": "Bloqueo de app",
   "pushNotifications": "Notificaciones push",
   "clearHistory": "Borrar historial",
+  "clearAllData": "Borrar todos los datos",
   "exportData": "Exportar datos",
   "skip": "Omitir",
   "next": "Siguiente",
@@ -220,6 +221,10 @@
   "languageChangedTo": "Idioma cambiado a {language}",
   "clearHistoryQuestion": "¿Borrar historial?",
   "clearHistoryWarning": "Esto eliminará todos tus datos. Esta acción no se puede deshacer.",
+  "clearAllDataQuestion": "¿Borrar todos los datos?",
+  "clearAllDataWarning": "Esto eliminará permanentemente todos tus datos incluyendo el historial de chat, entradas de diario, evaluaciones, configuraciones y modelos de IA descargados. Esta acción no se puede deshacer.",
+  "dataCleared": "Todos los datos fueron eliminados exitosamente",
+  "clearingData": "Eliminando datos...",
   "clear": "Borrar",
   "historyCleared": "Historial borrado",
   "aboutAnchor": "Acerca de Anchor",
