--- a/lib/l10n/app_fr.arb
+++ b/lib/l10n/app_fr.arb
@@ -46,6 +46,7 @@
   "appLock": "Verrouillage de l'app",
   "pushNotifications": "Notifications push",
   "clearHistory": "Effacer l'historique",
+  "clearAllData": "Effacer toutes les données",
   "exportData": "Exporter les données",
   "skip": "Passer",
   "next": "Suivant",
@@ -220,6 +221,10 @@
   "languageChangedTo": "Langue changée en {language}",
   "clearHistoryQuestion": "Effacer l'historique?",
   "clearHistoryWarning": "Cela supprimera toutes vos données. Cette action ne peut pas être annulée.",
+  "clearAllDataQuestion": "Effacer toutes les données?",
+  "clearAllDataWarning": "Cela supprimera définitivement toutes vos données, y compris l'historique des discussions, les entrées de journal, les évaluations, les paramètres et les modèles d'IA téléchargés. Cette action ne peut pas être annulée.",
+  "dataCleared": "Toutes les données ont été effacées avec succès",
+  "clearingData": "Suppression des données...",
   "clear": "Effacer",
   "historyCleared": "Historique effacé",
   "aboutAnchor": "À propos d'Anchor",
