--- a/lib/l10n/app_hi.arb
+++ b/lib/l10n/app_hi.arb
@@ -46,6 +46,7 @@
   "appLock": "ऐप लॉक",
   "pushNotifications": "पुश सूचनाएं",
   "clearHistory": "इतिहास साफ़ करें",
+  "clearAllData": "सभी डेटा साफ़ करें",
   "exportData": "डेटा निर्यात करें",
   "skip": "छोड़ें",
   "next": "अगला",
@@ -220,6 +221,10 @@
   "languageChangedTo": "भाषा {language} में बदली गई",
   "clearHistoryQuestion": "इतिहास साफ़ करें?",
   "clearHistoryWarning": "यह आपका सारा डेटा हटा देगा। यह क्रिया पूर्ववत नहीं की जा सकती।",
+  "clearAllDataQuestion": "सभी डेटा साफ़ करें?",
+  "clearAllDataWarning": "यह स्थायी रूप से आपका सभी डेटा हटा देगा जिसमें चैट इतिहास, डायरी प्रविष्टियां, मूल्यांकन, सेटिंग्स और डाउनलोड किए गए AI मॉडल शामिल हैं। यह क्रिया पूर्ववत नहीं की जा सकती।",
+  "dataCleared": "सभी डेटा सफलतापूर्वक साफ़ किया गया",
+  "clearingData": "डेटा साफ़ किया जा रहा है...",
   "clear": "साफ़ करें",
   "historyCleared": "इतिहास साफ़ किया गया",
   "aboutAnchor": "Anchor के बारे में",
