--- a/lib/l10n/app_it.arb
+++ b/lib/l10n/app_it.arb
@@ -46,6 +46,7 @@
   "appLock": "Blocco app",
   "pushNotifications": "Notifiche push",
   "clearHistory": "Cancella cronologia",
+  "clearAllData": "Cancella tutti i dati",
   "exportData": "Esporta dati",
   "skip": "Salta",
   "next": "Avanti",
@@ -220,6 +221,10 @@
   "languageChangedTo": "Lingua cambiata in {language}",
   "clearHistoryQuestion": "Cancellare la cronologia?",
   "clearHistoryWarning": "Questo eliminerà tutti i tuoi dati. Questa azione non può essere annullata.",
+  "clearAllDataQuestion": "Cancellare tutti i dati?",
+  "clearAllDataWarning": "Questo eliminerà permanentemente tutti i tuoi dati inclusa la cronologia chat, le voci del diario, le valutazioni, le impostazioni e i modelli di IA scaricati. Questa azione non può essere annullata.",
+  "dataCleared": "Tutti i dati sono stati cancellati con successo",
+  "clearingData": "Cancellazione dati in corso...",
   "clear": "Cancella",
   "historyCleared": "Cronologia cancellata",
   "aboutAnchor": "Informazioni su Anchor",
