--- a/lib/l10n/app_pt.arb
+++ b/lib/l10n/app_pt.arb
@@ -46,6 +46,7 @@
   "appLock": "Bloqueio do app",
   "pushNotifications": "Notificações push",
   "clearHistory": "Limpar histórico",
+  "clearAllData": "Limpar todos os dados",
   "exportData": "Exportar dados",
   "skip": "Pular",
   "next": "Próximo",
@@ -220,6 +221,10 @@
   "languageChangedTo": "Idioma alterado para {language}",
   "clearHistoryQuestion": "Limpar histórico?",
   "clearHistoryWarning": "Isso excluirá todos os seus dados. Esta ação não pode ser desfeita.",
+  "clearAllDataQuestion": "Limpar todos os dados?",
+  "clearAllDataWarning": "Isso excluirá permanentemente todos os seus dados incluindo histórico de chat, entradas de diário, avaliações, configurações e modelos de IA baixados. Esta ação não pode ser desfeita.",
+  "dataCleared": "Todos os dados foram limpos com sucesso",
+  "clearingData": "Limpando dados...",
   "clear": "Limpar",
   "historyCleared": "Histórico limpo",
   "aboutAnchor": "Sobre o Anchor",
