--- a/lib/l10n/app_th.arb
+++ b/lib/l10n/app_th.arb
@@ -44,6 +44,7 @@
   "appLock": "ล็อคแอป",
   "pushNotifications": "การแจ้งเตือนแบบพุช",
   "clearHistory": "ล้างประวัติ",
+  "clearAllData": "ล้างข้อมูลทั้งหมด",
   "exportData": "ส่งออกข้อมูล",
   "skip": "ข้าม",
   "next": "ถัดไป",
@@ -218,6 +219,10 @@
   "languageChangedTo": "เปลี่ยนภาษาเป็น {language}",
   "clearHistoryQuestion": "ล้างประวัติ?",
   "clearHistoryWarning": "การดำเนินการนี้จะลบข้อมูลทั้งหมดของคุณ ไม่สามารถย้อนกลับได้",
+  "clearAllDataQuestion": "ล้างข้อมูลทั้งหมด?",
+  "clearAllDataWarning": "การดำเนินการนี้จะลบข้อมูลทั้งหมดของคุณอย่างถาวร รวมถึงประวัติการแชท บันทึกในไดอารี่ การประเมิน การตั้งค่า และโมเดล AI ที่ดาวน์โหลด ไม่สามารถย้อนกลับได้",
+  "dataCleared": "ล้างข้อมูลทั้งหมดสำเร็จแล้ว",
+  "clearingData": "กำลังล้างข้อมูล...",
   "clear": "ล้าง",
   "historyCleared": "ล้างประวัติแล้ว",
   "aboutAnchor": "เกี่ยวกับ Anchor",
