change gemini version

--- a/lib/l10n/app_de.arb
+++ b/lib/l10n/app_de.arb
@@ -136,9 +136,9 @@
   "requires2GBDownload": "Erfordert ~2GB Download",
   "usesDeviceResources": "Nutzt Geräteressourcen",
   "cloudAi": "Cloud-KI",
-  "morePowerful": "Leistungsfähiger",
-  "cloudDescription": "Betrieben von Cloud-Anbietern für schnellere, intelligentere Antworten.",
-  "moreCapableModels": "Leistungsfähigere Modelle",
+  "morePowerful": "Powered by Gemini 3",
+  "cloudDescription": "Powered by Googles neuestem Gemini 3 für schnelle, intelligente Antworten.",
+  "moreCapableModels": "Googles fortschrittlichste KI",
   "fasterResponses": "Schnellere Antworten",
   "noStorageNeeded": "Kein Speicher erforderlich",
   "requiresInternet": "Erfordert Internet",
@@ -237,7 +237,7 @@
   "dark": "Dunkel",
   "onDeviceProvider": "Auf dem Gerät",
   "privateRunsLocally": "Privat, läuft lokal",
-  "cloudGemini": "Cloud (Gemini)",
+  "cloudGemini": "Cloud (Gemini 3)",
   "fasterRequiresInternet": "Schneller, erfordert Internet",
   "apiKeyNotConfigured": "API-Schlüssel nicht konfiguriert",
   "findTherapist": "Therapeut finden",
