--- a/lib/l10n/app_es.arb
+++ b/lib/l10n/app_es.arb
@@ -136,9 +136,9 @@
   "requires2GBDownload": "Requiere ~2GB de descarga",
   "usesDeviceResources": "Usa recursos del dispositivo",
   "cloudAi": "IA en la Nube",
-  "morePowerful": "Más poderosa",
-  "cloudDescription": "Impulsado por proveedores de nube para respuestas más rápidas e inteligentes.",
-  "moreCapableModels": "Modelos más capaces",
+  "morePowerful": "Impulsado por Gemini 3",
+  "cloudDescription": "Impulsado por el último Gemini 3 de Google para respuestas rápidas e inteligentes.",
+  "moreCapableModels": "La IA más avanzada de Google",
   "fasterResponses": "Respuestas más rápidas",
   "noStorageNeeded": "Sin almacenamiento requerido",
   "requiresInternet": "Requiere Internet",
@@ -237,7 +237,7 @@
   "dark": "Oscuro",
   "onDeviceProvider": "En el dispositivo",
   "privateRunsLocally": "Privado, se ejecuta localmente",
-  "cloudGemini": "Nube (Gemini)",
+  "cloudGemini": "Nube (Gemini 3)",
   "fasterRequiresInternet": "Más rápido, requiere Internet",
   "apiKeyNotConfigured": "Clave API no configurada",
   "findTherapist": "Buscar terapeuta",
