--- a/lib/l10n/app_fr.arb
+++ b/lib/l10n/app_fr.arb
@@ -136,9 +136,9 @@
   "requires2GBDownload": "Nécessite ~2GB de téléchargement",
   "usesDeviceResources": "Utilise les ressources de l'appareil",
   "cloudAi": "IA Cloud",
-  "morePowerful": "Plus puissant",
-  "cloudDescription": "Alimenté par des fournisseurs cloud pour des réponses plus rapides et intelligentes.",
-  "moreCapableModels": "Modèles plus capables",
+  "morePowerful": "Propulsé par Gemini 3",
+  "cloudDescription": "Propulsé par le dernier Gemini 3 de Google pour des réponses rapides et intelligentes.",
+  "moreCapableModels": "L'IA la plus avancée de Google",
   "fasterResponses": "Réponses plus rapides",
   "noStorageNeeded": "Pas de stockage requis",
   "requiresInternet": "Nécessite Internet",
@@ -237,7 +237,7 @@
   "dark": "Sombre",
   "onDeviceProvider": "Sur l'appareil",
   "privateRunsLocally": "Privé, fonctionne localement",
-  "cloudGemini": "Cloud (Gemini)",
+  "cloudGemini": "Cloud (Gemini 3)",
   "fasterRequiresInternet": "Plus rapide, nécessite Internet",
   "apiKeyNotConfigured": "Clé API non configurée",
   "findTherapist": "Trouver un thérapeute",
