--- a/lib/l10n/app_hi.arb
+++ b/lib/l10n/app_hi.arb
@@ -136,9 +136,9 @@
   "requires2GBDownload": "~2GB डाउनलोड आवश्यक",
   "usesDeviceResources": "डिवाइस संसाधनों का उपयोग करता है",
   "cloudAi": "क्लाउड AI",
-  "morePowerful": "अधिक शक्तिशाली",
-  "cloudDescription": "तेज़, स्मार्ट प्रतिक्रियाओं के लिए क्लाउड प्रदाताओं द्वारा संचालित।",
-  "moreCapableModels": "अधिक सक्षम मॉडल",
+  "morePowerful": "Gemini 3 द्वारा संचालित",
+  "cloudDescription": "तेज़, बुद्धिमान प्रतिक्रियाओं के लिए Google के नवीनतम Gemini 3 द्वारा संचालित।",
+  "moreCapableModels": "Google की सबसे उन्नत AI",
   "fasterResponses": "तेज़ प्रतिक्रियाएं",
   "noStorageNeeded": "स्टोरेज की ज़रूरत नहीं",
   "requiresInternet": "इंटरनेट आवश्यक",
@@ -237,7 +237,7 @@
   "dark": "डार्क",
   "onDeviceProvider": "ऑन-डिवाइस",
   "privateRunsLocally": "निजी, स्थानीय रूप से चलता है",
-  "cloudGemini": "क्लाउड (Gemini)",
+  "cloudGemini": "क्लाउड (Gemini 3)",
   "fasterRequiresInternet": "तेज़, इंटरनेट आवश्यक",
   "apiKeyNotConfigured": "API कुंजी कॉन्फ़िगर नहीं",
   "findTherapist": "थेरेपिस्ट खोजें",
