--- a/lib/l10n/app_it.arb
+++ b/lib/l10n/app_it.arb
@@ -136,9 +136,9 @@
   "requires2GBDownload": "Richiede ~2GB di download",
   "usesDeviceResources": "Usa risorse del dispositivo",
   "cloudAi": "IA Cloud",
-  "morePowerful": "Più potente",
-  "cloudDescription": "Alimentato da provider cloud per risposte più veloci e intelligenti.",
-  "moreCapableModels": "Modelli più capaci",
+  "morePowerful": "Powered by Gemini 3",
+  "cloudDescription": "Alimentato dal più recente Gemini 3 di Google per risposte rapide e intelligenti.",
+  "moreCapableModels": "L'IA più avanzata di Google",
   "fasterResponses": "Risposte più veloci",
   "noStorageNeeded": "Nessuno spazio di archiviazione richiesto",
   "requiresInternet": "Richiede Internet",
@@ -237,7 +237,7 @@
   "dark": "Scuro",
   "onDeviceProvider": "Sul dispositivo",
   "privateRunsLocally": "Privato, eseguito localmente",
-  "cloudGemini": "Cloud (Gemini)",
+  "cloudGemini": "Cloud (Gemini 3)",
   "fasterRequiresInternet": "Più veloce, richiede Internet",
   "apiKeyNotConfigured": "Chiave API non configurata",
   "findTherapist": "Trova terapeuta",
