--- a/lib/l10n/app_pt.arb
+++ b/lib/l10n/app_pt.arb
@@ -136,9 +136,9 @@
   "requires2GBDownload": "Requer ~2GB de download",
   "usesDeviceResources": "Usa recursos do dispositivo",
   "cloudAi": "IA na Nuvem",
-  "morePowerful": "Mais poderosa",
-  "cloudDescription": "Alimentado por provedores de nuvem para respostas mais rápidas e inteligentes.",
-  "moreCapableModels": "Modelos mais capazes",
+  "morePowerful": "Powered by Gemini 3",
+  "cloudDescription": "Alimentado pelo mais recente Gemini 3 do Google para respostas rápidas e inteligentes.",
+  "moreCapableModels": "A IA mais avançada do Google",
   "fasterResponses": "Respostas mais rápidas",
   "noStorageNeeded": "Sem armazenamento necessário",
   "requiresInternet": "Requer Internet",
@@ -237,7 +237,7 @@
   "dark": "Escuro",
   "onDeviceProvider": "No dispositivo",
   "privateRunsLocally": "Privado, executa localmente",
-  "cloudGemini": "Nuvem (Gemini)",
+  "cloudGemini": "Nuvem (Gemini 3)",
   "fasterRequiresInternet": "Mais rápido, requer Internet",
   "apiKeyNotConfigured": "Chave da API não configurada",
   "findTherapist": "Encontrar terapeuta",
