--- a/lib/l10n/app_th.arb
+++ b/lib/l10n/app_th.arb
@@ -134,9 +134,9 @@
   "requires2GBDownload": "ต้องดาวน์โหลด ~2GB",
   "usesDeviceResources": "ใช้ทรัพยากรอุปกรณ์",
   "cloudAi": "Cloud AI",
-  "morePowerful": "ทรงพลังมากขึ้น",
-  "cloudDescription": "ขับเคลื่อนโดยผู้ให้บริการคลาวด์เพื่อการตอบสนองที่เร็วและฉลาดขึ้น",
-  "moreCapableModels": "โมเดลที่มีความสามารถมากขึ้น",
+  "morePowerful": "ขับเคลื่อนด้วย Gemini 3",
+  "cloudDescription": "ขับเคลื่อนโดย Gemini 3 ล่าสุดของ Google เพื่อการตอบสนองที่รวดเร็วและชาญฉลาด",
+  "moreCapableModels": "AI ที่ล้ำหน้าที่สุดของ Google",
   "fasterResponses": "การตอบสนองที่เร็วขึ้น",
   "noStorageNeeded": "ไม่ต้องใช้พื้นที่เก็บข้อมูล",
   "requiresInternet": "ต้องใช้อินเทอร์เน็ต",
@@ -235,7 +235,7 @@
   "dark": "มืด",
   "onDeviceProvider": "บนอุปกรณ์",
   "privateRunsLocally": "ส่วนตัว ทำงานในเครื่อง",
-  "cloudGemini": "คลาวด์ (Gemini)",
+  "cloudGemini": "คลาวด์ (Gemini 3)",
   "fasterRequiresInternet": "เร็วกว่า ต้องใช้อินเทอร์เน็ต",
   "apiKeyNotConfigured": "ยังไม่ได้กำหนด API key",
   "findTherapist": "ค้นหานักบำบัด",
